# theveil-sdks

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  security.md
.github/workflows/: ci.yml  publish-go.yml  publish-mcp-server.yml  publish-python.yml  publish-ts.yml
go/: README.md  client_id_test.go  errors.go  errors_test.go  get_certificate_summary_test.go  get_certificate_test.go  go.mod  list_audit_events_test.go  lucairn.go  lucairn_test.go  messages_test.go  options.go  testutil_extras_test.go  testutil_test.go  theveil.go  theveil_test.go  types.go  verify.go  verify_certificate_test.go
go/internal/verify/: canonical.go  canonical_test.go  keys.go  parse.go  pipeline.go  signable.go  signature.go
mcp-server/: .dockerignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  server.json  smithery.yaml  tsconfig.json
mcp-server/src/: bridge.ts  gateway-client.ts  index.ts  server.ts  types.ts
mcp-server/tests/: bridge.test.ts  gateway-client.test.ts  server.test.ts
python/: PUBLISH.md  README.md  SECURITY.md  pyproject.toml
python/src/lucairn/: __init__.py  client.py  types.py
python/src/lucairn/verify_certificate/: __init__.py  parse.py  pipeline.py  signable.py  signature.py
python/src/theveil/: __init__.py  client.py  errors.py  types.py
python/src/theveil/verify_certificate/: __init__.py  canonical_json.py  keys.py  parse.py  pipeline.py  signable.py  signature.py
python/tests/: conftest.py  test_canonical_json.py  test_client.py  test_client_get_certificate.py  test_client_get_certificate_summary.py  test_client_id.py  test_client_messages.py  test_errors.py  test_legacy_shim.py  test_list_audit_events.py  test_verify_certificate.py
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/src/: canonicalJson.test.ts  client-id.test.ts  client-id.ts  client.getCertificate.test.ts  client.getCertificateSummary.test.ts  client.listAuditEvents.test.ts  client.messages.test.ts  client.test.ts  client.ts  errors.test.ts  errors.ts  index.ts  test-server.ts  test-setup.ts  types.ts  verifyCertificate.test.ts
ts/src/verify-certificate/: canonical-json.ts  index.ts  keys.ts  parse.ts  signable.ts  signature.ts
ts/src/verify-certificate/__fixtures__/: canonical-json-go-reference-input.json  canonical-json-go-reference.hex  cert-byok-exempt.json  cert-go-signed-reference.json  cert-malformed-plus-bad-version.json  cert-malformed-truncated.json  cert-no-signature.json  cert-oracle-input.json  cert-protocol-version-mismatch.json  cert-tampered-payload.json  cert-valid-anchored.json  cert-valid-failed.json  cert-valid-pending.json  cert-whitespace-signature.json  gen-byok-exempt-cert.ts  gen-cert-oracle.go  gen-go-reference.go  generate-certs.ts  signable-go-reference.hex  test-witness-keypair.json  witness-keypair.json
