[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "theveil"
version = "0.1.1"
description = "The Veil — privacy-preserving AI infrastructure client for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Declade" }]
keywords = [
  "privacy",
  "gdpr",
  "llm",
  "ai",
  "pii",
  "pseudonymization",
  "eu-ai-act",
  "anthropic",
  "openai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://dsaveil.io"
Repository = "https://github.com/Declade/theveil-sdks"
Issues = "https://github.com/Declade/theveil-sdks/issues"
Changelog = "https://github.com/Declade/theveil-sdks/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/theveil"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/theveil",
  "/README.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
