[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "lucairn"
version = "1.1.0"
description = "Lucairn — privacy-preserving AI gateway client for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Declade" }]
keywords = [
  "privacy",
  "gdpr",
  "llm",
  "ai",
  "pii",
  "pseudonymization",
  "eu-ai-act",
  "anthropic",
  "openai",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://lucairn.eu"
Repository = "https://github.com/Declade/lucairn-sdks"
Issues = "https://github.com/Declade/lucairn-sdks/issues"
Changelog = "https://github.com/Declade/lucairn-sdks/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
# Ship the new `lucairn` package and the in-tree compatibility shim so
# existing callers can keep their imports for one minor-version cycle.
# See python/README.md for the rename map.
packages = ["src/lucairn", "src/theveil"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/lucairn",
  "/src/theveil",
  "/README.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
